import "server/backend/proto/index_search_common_names.proto";

message RawDoc {
  required int32 doc_id = 1;
  required int32 raw_id = 2;
  required int32 product_id = 3;
  required int32 breed_id = 4;
  required double min_price = 5;
  required double max_price = 6;
  required int32 updated_time = 7;
  required string mobile = 8;
  required string spec = 9;
  required int32 pics = 10;
  required int32 supply_city_id = 11;
  required int32 supply_county_id = 12;
  required string customer_id = 13;
  required int32 created_time = 14;
  required double supply_longitude = 15;
  required double supply_latitude = 16;
  required int32 supply_province_id = 17; 

  optional IndexSearchCommonNames names = 18;
}
